--- a/src/app/how-to-play/how-to-play.component.html
+++ b/src/app/how-to-play/how-to-play.component.html
@@ -47,7 +47,7 @@
                                     <div class="blog-item">
                                         <div class="blog-image">
                                             <a>
-                                                <img class="img-fluid" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top' src="assets/img/blog/img-1.jpg" alt="">
+                                                <img class="img-fluid" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top' src="assets/img/qualifier.jpg" alt="">
                                             </a>
                                         </div>
                                         <div class="descr">
@@ -65,7 +65,7 @@
                                     <div class="blog-item">
                                         <div class="blog-image">
                                             <a>
-                                                <img class="img-fluid" routerLink="/pro" routerLinkActive="router-link-active" href='#top' src="assets/img/blog/img-1.jpg" alt="">
+                                                <img class="img-fluid" routerLink="/pro" routerLinkActive="router-link-active" href='#top' src="assets/img/pro.jpg" alt="">
                                             </a>
                                         </div>
                                         <div class="descr">
@@ -84,7 +84,7 @@
                                     <div class="blog-item">
                                         <div class="blog-image">
                                             <a>
-                                                <img class="img-fluid" routerLink="/mentor" routerLinkActive="router-link-active" href='#top' src="assets/img/blog/img-1.jpg" alt="">
+                                                <img class="img-fluid" routerLink="/mentor" routerLinkActive="router-link-active" href='#top' src="assets/img/mentor.jpg"alt="">
                                             </a>
                                         </div>
                                         <div class="descr">
