--- a/src/styles.css
+++ b/src/styles.css
@@ -713,7 +713,7 @@ a.back-to-top:focus {
 .navbar-expand-lg .navbar-nav li a:hover,
 .navbar-expand-lg .navbar-nav li .active>a,
 .navbar-expand-lg .navbar-nav li a:focus {
-    color: blue;
+    color: #daa520;
     outline: none;
 }
 
@@ -2746,7 +2746,17 @@ a.back-to-top:focus {
 .bs-example {
     margin: 20px;
 }
+.custom{
+    padding: 45px 45px;
+    padding: 1rem;
+    margin: 2.777rem 0;
+    background: #fff;
+    border-radius: 28px;
+    display: table;
+  
+    width: 100%;
 
+}
 .custom-box {
     padding: 45px 45px;
     padding: 1rem;
