--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -80,7 +80,54 @@
     <app-popup-banner></app-popup-banner>
 </div>
 <!--Popup banner div end-->
-
+<!-- Counter Area Start-->
+<section class="counter-section section-padding">
+        <div class="container">
+            <div class="row">
+                <!-- Counter Item -->
+                <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+                    <div class="counter wow fadeInRight" data-wow-delay="0.3s">
+                        <div class="icon"> <img src="assets/img/users.png" class="img-fluid team-img" alt="" href='#top' /></div>
+                        <p>11
+                        </p>
+                        <span>PARTICIPATING
+                          TEAMS</span>
+                    </div>
+                </div>
+                <!-- Counter Item -->
+                <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+                    <div class="counter wow fadeInRight" data-wow-delay="0.6s">
+                        <div class="icon"> <img src="assets/img/single-user.png" class="img-fluid team-img" alt="" href='#top' /></div>
+                        <p>110
+                        </p>
+                        <span>PARTICIPATING
+                          PLAYERS</span>
+                    </div>
+                </div>
+                <!-- Counter Item -->
+                <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+                    <div class="counter wow fadeInRight" data-wow-delay="0.9s">
+                        <div class="icon"> <img src="assets/img/usersquali.png" class="img-fluid team-img" alt="" href='#top' /></div>
+                        <p>150+
+                        </p>
+                        <span> FREE
+                          QUALIFIERS</span>
+                    </div>
+                </div>
+                <!-- Counter Item -->
+                <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
+                    <div class="counter wow fadeInRight" data-wow-delay="1.2s">
+                        <div class="icon"> <img src="assets/img/money.png" class="img-fluid team-img" alt="" href='#top' /></div>
+                        <p>5
+                        </p>
+                        <span> CRORES
+                          PRIZE POOL</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Counter Area End-->
 <!---floating icon-->
 <div id="mySidenav" class="sidenav">
     <div class="">
@@ -92,26 +139,6 @@
 </div>
 
 <!---floating icon-->
-
-<!-- Coundown Section Start -->
-<section class="countdown-timer section-padding">
-    <div class="container">
-        <div class="row text-center">
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="heading-count">
-                    <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2>
-                </div>
-            </div>
-            <div class="col-md-12 col-sm-12 col-xs-12">
-                <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
-                    <div id="clock" class="time-count"></div>
-                </div>
-                <!--a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a-->
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Coundown Section End -->
 
 
 
@@ -206,60 +233,139 @@
     </div>
 </section>
 <!-- About Section End -->
+<!--How to apply section-->
+<section>
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="contentContainer">
+                        <div class="custom">
+                            <h3 class="common-heading text-center">HOW TO APPLY</h3>
+                            <div class="content-box">
+                                <p style="font-size: 18px;"><strong>PSL is for all poker enthusiasts who dream of greatness. It’s a free entry league that aims to provide everyone who loves poker a shot of playing the biggest poker league in India. If you are someone who lives and breaths poker, here is your chance to prove your love for the game.
+                                </strong></p>
+                                <p style="text-align: justify; font-size: 18px; padding:15px;"><strong> If you think you qualify for this criteria, Kindly select one of the option given below.</strong></p>
+    
+                            </div>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-12">
+    
+                                    </div>
+                                    <div class="col-lg-4 col-md-6 col-xs-12">
+                                        <div class="blog-item">
+                                            <div class="blog-image">
+                                                <a>
+                                                    <img class="img-fluid" routerLink="/qualifier" routerLinkActive="router-link-active" href='#top' src="assets/img/qualifier.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="descr">
+    
+    
+                                                <div class="col-xs-12 text-center">
+                                                    <a  routerLink="/qualifier" routerLinkActive="router-link-active" class="btn btn-common" style="color: #fff">BE A QUALIFIER</a>
+                                                </div>
+    
+    
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-4 col-md-6 col-xs-12">
+                                        <div class="blog-item">
+                                            <div class="blog-image">
+                                                <a>
+                                                    <img class="img-fluid" routerLink="/pro" routerLinkActive="router-link-active" href='#top' src="assets/img/pro.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="descr">
+    
+    
+                                                <div class="col-xs-12 text-center">
+                                                    <a routerLink="/pro"  routerLinkActive="router-link-active" class="btn btn-common" style="color: #fff">BE A PRO</a>
+                                                </div>
+    
+    
+                                            </div>
+                                        </div>
+                                    </div>
+    
+                                    <div class="col-lg-4 col-md-6 col-xs-12">
+                                        <div class="blog-item">
+                                            <div class="blog-image">
+                                                <a>
+                                                    <img class="img-fluid" routerLink="/mentor" routerLinkActive="router-link-active" href='#top' src="assets/img/mentor.jpg" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="descr">
+    
+    
+                                                <div class="col-xs-12 text-center">
+                                                    <a routerLink="/mentor"  routerLinkActive="router-link-active" class="btn btn-common" style="color: #fff">BE A MENTOR</a>
+                                                </div>
+    
+    
+                                            </div>
+                                        </div>
+                                    </div>
+    
+                                </div>
+    
+                            </div>
+    
+    
+                        </div>
+                        <!--
+                      <div class="row">
+                          <div class="col-xs-12 playVideomn">
+                              <p>&nbsp;</p>
+                              <h3 class="common-heading">Learn &amp; Play Poker With Adda52</h3>
+                              <div class="video-wrapper">
+                                  <div class="play-area"><iframe id="player" title="YouTube video player" src="https://www.youtube.com/embed/SlcpPokznhw" frameborder="0" width="100%" height="100%"></iframe></div>
+                              </div>
+                              <div class="text-center takeTutorialBtn"><a class="btn red-btn global-btn" href="/home/openGamehtml5Window/poker">PLAY</a></div>
+                          </div>
+                      </div>
+                      -->
+    
+                    </div>
+                </div>
+       
+         </div>
+         </div>
+    </section>
+<!--How to apply section end-->
 
-<!-- Counter Area Start-->
-<section class="counter-section section-padding">
-    <div class="container">
-        <div class="row">
-            <!-- Counter Item -->
-            <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
-                <div class="counter wow fadeInRight" data-wow-delay="0.3s">
-                    <div class="icon"> <img src="assets/img/users.png" class="img-fluid team-img" alt="" href='#top' /></div>
-                    <p>11
-                    </p>
-                    <span>PARTICIPATING
-                      TEAMS</span>
-                </div>
-            </div>
-            <!-- Counter Item -->
-            <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
-                <div class="counter wow fadeInRight" data-wow-delay="0.6s">
-                    <div class="icon"> <img src="assets/img/single-user.png" class="img-fluid team-img" alt="" href='#top' /></div>
-                    <p>110
-                    </p>
-                    <span>PARTICIPATING
-                      PLAYERS</span>
-                </div>
-            </div>
-            <!-- Counter Item -->
-            <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
-                <div class="counter wow fadeInRight" data-wow-delay="0.9s">
-                    <div class="icon"> <img src="assets/img/usersquali.png" class="img-fluid team-img" alt="" href='#top' /></div>
-                    <p>150+
-                    </p>
-                    <span> FREE
-                      QUALIFIERS</span>
-                </div>
-            </div>
-            <!-- Counter Item -->
-            <div class="col-md-6 col-lg-3 col-xs-12 work-counter-widget text-center">
-                <div class="counter wow fadeInRight" data-wow-delay="1.2s">
-                    <div class="icon"> <img src="assets/img/money.png" class="img-fluid team-img" alt="" href='#top' /></div>
-                    <p>5
-                    </p>
-                    <span> CRORES
-                      PRIZE POOL</span>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-<!-- Counter Area End-->
+
+<!-- Ask Question Section Start -->
+<app-faqs></app-faqs>
+<!-- Ask Question Section End -->
+
+
 
 <!-- Schedule Section Start -->
 <app-event-schedule></app-event-schedule>
 <!-- Schedule Section End -->
 
+<!-- Coundown Section Start -->
+<section class="countdown-timer section-padding">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="heading-count">
+                        <h2 class="wow fadeInDown" data-wow-delay="0.2s">Event Will Start In</h2>
+                    </div>
+                </div>
+                <div class="col-md-12 col-sm-12 col-xs-12">
+                    <div class="row time-countdown justify-content-center wow fadeInUp" data-wow-delay="0.2s">
+                        <div id="clock" class="time-count"></div>
+                    </div>
+                    <!--a href="pricing.html" class="btn btn-common wow fadeInUp" data-wow-delay="0.3s">Add to My Calender</a-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Coundown Section End -->
+    
 <!-- Team Section Start -->
 <section id="team" class="section-padding text-center">
     <div class="container py-lg-3 py-2">
@@ -439,10 +545,12 @@
     </div>
 </section>
 <!-- Gallary Section End -->
-
-<!-- Ask Question Section Start -->
-<app-faqs></app-faqs>
-<!-- Ask Question Section End -->
+<!-- Testimonials -->
+<section id="testimonials" class="section-padding" style="background: #16253c">
+        <app-testimonials></app-testimonials>
+    
+    </section>
+    <!-- Testimonials ends -->
 
 <!-- Sponsors Section Start -->
 <section id="sponsors" class="section-padding">
@@ -504,15 +612,7 @@
 
 
 
-<!-- Event Slides Section Start -->
-<section id="testimonials" class="section-padding" style="background: #16253c">
-    <app-testimonials></app-testimonials>
 
-</section>
-<!-- Event Slides Section End -->
-<!-- Testimonials -->
-
-<!-- Testimonials ends -->
 
 <!-- contact map and address -->
 
