--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <!-- Header Area wrapper Starts -->
 
 <!-- Navbar Start -->
-<nav class="top-nav">hello</nav>
+<nav class="top-nav"></nav>
 <nav class="navbar navbar-expand-lg fixed-top scrolling-navbar">
     
     <div class="container">
