--- a/src/styles.css
+++ b/src/styles.css
@@ -832,11 +832,11 @@ a.back-to-top:focus {
 }
 
 .slicknav_btn {
-    border-color: #16253c;
+    border-color: #fff;
 }
 
 .slicknav_menu .slicknav_icon-bar {
-    background: #16253c;
+    background: #fff;
 }
 
 
