--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -2138,7 +2138,7 @@ a.back-to-top:focus {
 
 #main-slide .carousel-indicators {
     cursor: pointer;
-    bottom: 90px;
+    /*bottom: 90px;*/
 }
 
 #main-slide:hover .carousel-control {
